# serial-win-rs

./: Cargo.toml  README.md  search-index.js
serial_win/: constant.DCBFAbortOnError.html  constant.DCBFBinary.html  constant.DCBFDsrSensitivity.html  constant.DCBFDtrControl_hi.html  constant.DCBFDtrControl_lo.html  constant.DCBFDummy.html  constant.DCBFErrorChar.html  constant.DCBFInX.html  constant.DCBFNull.html  constant.DCBFOutX.html  constant.DCBFOutxCtsFlow.html  constant.DCBFOutxDsrFlow.html  constant.DCBFParity.html  constant.DCBFRtsControl_hi.html  constant.DCBFRtsControl_lo.html  constant.DCBFTXContinueOnXoff.html  constant.ERROR_INVALID_USER_BUFFER.html  constant.ERROR_NOT_ENOUGH_MEMORY.html  constant.EVENPARITY.html  constant.EV_BREAK.html  constant.EV_CTS.html  constant.EV_DSR.html  constant.EV_ERR.html  constant.EV_RING.html  constant.EV_RLSD.html  constant.EV_RXCHAR.html  constant.EV_RXFLAG.html  constant.EV_TXEMPTY.html  constant.MARKPARITY.html  constant.NOPARITY.html  constant.ODDPARITY.html  constant.ONE5STOPBITS.html  constant.ONESTOPBIT.html  constant.PURGE_RXABORT.html  constant.PURGE_RXCLEAR.html  constant.PURGE_TXABORT.html  constant.PURGE_TXCLEAR.html  constant.SPACEPARITY.html  constant.TWOSTOPBITS.html  enum.DTR_CONTROL.html  (+17 more)
serial_win/ffi/: enum.DTR_CONTROL.html  enum.Parity.html  enum.StopBits.html  fn.GetCommState.html  fn.PurgeComm.html  fn.SetCommMask.html  fn.SetCommState.html  fn.SetCommTimeouts.html  fn.WaitCommEvent.html  sidebar-items.js  struct.COMMTIMEOUTS.html  struct.CommEventFlags.html  struct.DCB.html  (+2 more)
src/: ffi.rs  lib.rs
(+20 files in other folders)
